--- a/Docs/styles/index.css
+++ b/Docs/styles/index.css
@@ -5,6 +5,7 @@
     outline: none;
     font-family: Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
+    font-size: 1.1rem;
 }
 
 :root {
