--- a/Docs/styles/bh-online.css
+++ b/Docs/styles/bh-online.css
@@ -7,6 +7,7 @@
     outline: none;
     font-family: "Roboto", sans-serif;
     scroll-behavior: smooth;
+    /* font-size: 1.1rem; */
 }
 
 :root {
